integrate with twitter ostrich